Fixes an issue with 3 col text only missing separators and incorrect spacing.

--- a/src/scss/block-patterns/_three-columns-text.scss
+++ b/src/scss/block-patterns/_three-columns-text.scss
@@ -22,3 +22,32 @@
 	}
 }
 
+.ucsc-3-column-text__stack {
+	position: relative;
+
+	&::after {
+		content: "";
+		position: absolute;
+		right: 0;
+		bottom: calc((var(--wp--preset--spacing--70) / 2) * -1);
+		width: 100%;
+		height: 1px;
+		background-color: #ccc;
+
+		@include media-query($medium) {
+			right: calc((var(--wp--preset--spacing--70) / 2) * -1);
+			bottom: auto;
+			top: 0;
+			height: 100%;
+			width: 1px;
+		}
+	}
+
+	&:last-of-type {
+
+		&::after {
+			content: none;
+		}
+	}
+}
+
